🐛 FIX: Margin issue on mobile device

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -89,7 +89,7 @@ main {
     margin: 5px 25px 0rem;
   }
   main {
-    margin-top: 15px;
+    margin-top: 50px;
   }
 }
 
